#79 event recurrent todos menos pre recorded

--- a/templates/courses/event_edit.html
+++ b/templates/courses/event_edit.html
@@ -235,8 +235,8 @@
             $("#input_date_start").hide();
             $("#input_date_end").hide();
             $("#input_time_day").hide();
-            $("#event_recurrent").hide();
             $('#input_record_date').show();
+            $("#event_recurrent").hide();
 
             $('#diamante_azul').hide();
             $('#diamante_amarillo').hide();
@@ -249,8 +249,8 @@
             $("#input_date_start").show();
             $("#input_date_end").show();
             $("#input_time_day").show();
-            $("#event_recurrent").hide();
             $('#input_record_date').hide();
+            $("#event_recurrent").show();
 
             $('#diamante_azul').hide();
             $('#diamante_amarillo').show();
@@ -263,8 +263,9 @@
             $("#input_date_start").show();
             $("#input_date_end").show();
             $("#input_time_day").show();
+            $('#input_record_date').hide();
             $("#event_recurrent").show();
-            $('#input_record_date').hide()
+
 
             $('#diamante_amarillo').hide();
             $('#diamante_azul').hide();
@@ -277,8 +278,8 @@
             $("#input_date_start").show();
             $("#input_date_end").hide();
             $("#input_time_day").show();
-            $("#event_recurrent").hide();
             $('#input_record_date').hide();
+            $("#event_recurrent").show();
 
             $('#diamante_azul').show();
             $('#diamante_amarillo').hide();
