#78 profile diamonds amount

--- a/templates/profiles/profile_certificates.html
+++ b/templates/profiles/profile_certificates.html
@@ -14,7 +14,7 @@
                                     <img title="Evento" src="{% static 'assets/img/diamante_verde.png' %}"  width="20px" alt="">
                                 </div>
                                 <div>
-                                    <h4>25</h4>
+                                    <h4>{{ green_diamonds }}</h4>
                                 </div>
                             </div>
                             <div class="col-md  certi_col">
@@ -22,7 +22,7 @@
                                     <img title="Evento" src="{% static 'assets/img/diamante_amarillo.png' %}"  width="20px" alt="">
                                 </div>
                                 <div>
-                                    <h4>15</h4>
+                                    <h4>{{ yellow_diamonds }}</h4>
                                 </div>
                             </div>
                             <div class="col-md certi_col">
@@ -30,16 +30,15 @@
                                     <img title="Evento" src="{% static 'assets/img/diamante_magenta.png' %}"  width="20px" alt="">
                                 </div>
                                 <div>
-                                    <h4>5</h4>
+                                    <h4>{{ magenta_diamonds }}</h4>
                                 </div>
                             </div>
                             <div class="col-md certi_col">
                                  <div class="img_col">
-
                                     <img title="Evento" src="{% static 'assets/img/diamante_azul.png' %}"  width="20px" alt="">
                                 </div>
                                 <div>
-                                    <h4>22</h4>
+                                    <h4>{{ blue_diamonds }}</h4>
                                 </div>
                             </div>
                         </div>
