--- a/templates/profiles/profile_certificates.html
+++ b/templates/profiles/profile_certificates.html
@@ -46,8 +46,7 @@
 
                     <p class="pt-md-10">
                       Aquí puedes encontrar tus certificados. Recuerda que para recibir un
-                        certificado debes solicitarlo, puedes hacerlo en la página de "Favoritos". El creador del curso / evento
-                        debe aceptar tu solicitud.
+                      certificado debes solicitarlo (puedes hacerlo en la página del evento). El creador debe aceptar tu solicitud.
                     </p>
                     <div class="text-white rounded bg-warning text-uppercase font-weight-medium px-6 py-3 mb-3">Tus Certificados</div>
                     <hr>
