--- a/templates/courses/event_create.html
+++ b/templates/courses/event_create.html
@@ -19,6 +19,7 @@
     {% if profile.email_confirmed %}
         <form method="post" id="event_create_form" role="form" action="{% url 'event_create' %}" enctype="multipart/form-data">
             {% csrf_token %}
+            <div class="row">
             <div class="col-md-8">
                 <div class="form-group">
                     <label for="Tipo">
@@ -57,12 +58,14 @@
                     </label>
                 </div>
             </div>
-            <div class="col-md-4">
-                <img id="diamante_amarillo" title="Curso" src="{% static 'assets/img/diamante_amarillo.png' %}" class="" alt="Curso">
-                <img id="diamante_azul" title="Examen" src="{% static 'assets/img/diamante_azul.png' %}" class="" alt="Examen">
-                <img id="diamante_magenta" title="Pre-Grabado" src="{% static 'assets/img/diamante_magenta.png' %}" class="" alt="Pre-Grabado">
-                <img id="diamante_verde" title="Evento" src="{% static 'assets/img/diamante_verde.png' %}" class="" alt="Evento">
+            <div class="col-md-4 form_img">
+                <img id="diamante_amarillo" title="Curso" src="{% static 'assets/img/diamante_amarillo.png' %}" class="diamond_form" alt="Curso">
+                <img id="diamante_azul" title="Examen" src="{% static 'assets/img/diamante_azul.png' %}" class="diamond_form" alt="Examen">
+                <img id="diamante_magenta" title="Pre-Grabado" src="{% static 'assets/img/diamante_magenta.png' %}" class="diamond_form" alt="Pre-Grabado">
+                <img id="diamante_verde" title="Evento" src="{% static 'assets/img/diamante_verde.png' %}" class="diamond_form" alt="Evento">
             </div>
+            </div>
+
             <hr>
 
             <div class="form-group">
