--- a/templates/profiles/profile_cert_requests.html
+++ b/templates/profiles/profile_cert_requests.html
@@ -54,6 +54,49 @@
                         </div>
                       </div>
                   {% endfor %}
+
+              {% for c in cert_requests_rejected %}
+{#                  TODO esto debe estar colapsado, sin mostrarse por default#}
+                      <div class="media media-list-view mb-5">
+                        <div class="media-body">
+                          <h3 class="mb-3 mb-lg-2 mb-xl-3 text-muted">
+                            {{ c.event.title }}
+                            {% if c.event.event_type == "COURSE" %}
+                                {% if c.event.is_recorded %}
+                                    <small class="text-muted">
+                                        <i class="fa fa-play-circle mr-2" aria-hidden="true"></i>
+                                    </small>
+                                {% else %}
+                                    <small class="text-muted">
+                                        <i class="fa fa-video-camera mr-2" aria-hidden="true"></i>
+                                    </small>
+                                {% endif %}
+                            {% elif c.event.event_type == "EVENT" %}
+                                {% if c.event.is_recurrent %}
+                                    <small class="text-muted">
+                                        <i class="fa fa-calendar mr-2" aria-hidden="true"></i>
+                                    </small>
+                                {% else %}
+                                    <small class="text-muted">
+                                        <i class="fa fa-tag mr-2" aria-hidden="true"></i>
+                                    </small>
+                                {% endif %}
+                            {% endif %}
+                          <a target="_blank" class="text-info text-capitalize font-weight-bold" href="">
+                            {{ c.user.username }} <i class="fa fa-user-circle-o mr-2" aria-hidden="true"></i>
+                          </a>
+                          </h3>
+                        <ul class="list-unstyled d-flex text-muted mb-2">
+                            <li class="mr-3">
+                                <button type="button" data-id="{{ c.id }}" class="btn btn-success accept_certificate">
+                                <i class="fa fa-certificate"></i> Aceptar</button>
+                            </li>
+                        </ul>
+                        </div>
+                      </div>
+                  {% endfor %}
+
+
               </div>
             </div>
         </div>
